style: fixed spacing select

--- a/src/scss/blocks/_enhanced-select.scss
+++ b/src/scss/blocks/_enhanced-select.scss
@@ -41,7 +41,7 @@
       font-family: 'Google Sans', sans-serif;
       font-size: 1.125rem;
       line-height: 1.913;
-      padding: 0.625rem 1.438rem;
+      padding: 0.375rem 1.438rem;
       text-align: left;
     }
 
